Fixed segmentation fault
aka I rewrote the whole thing in gloss

--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                snake-hs
+name:                haskell-gui-snake2
 version:             0.1.0.0
-github:              "githubuser/snake-hs"
+github:              "githubuser/haskell-gui-snake2"
 license:             BSD3
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,19 +17,18 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on Github at <https://github.com/githubuser/snake-hs#readme>
+description:         Please see the README on Github at <https://github.com/githubuser/haskell-gui-snake2#readme>
 
 dependencies:
 - base >= 4.7 && < 5
-- GLUT
+- gloss
 - random
-- bifunctors
 
 library:
   source-dirs: src
 
 executables:
-  snake:
+  exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -37,10 +36,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - snake-hs
+    - haskell-gui-snake2
 
 tests:
-  snake-hs-test:
+  haskell-gui-snake2-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -48,4 +47,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - snake-hs
+    - haskell-gui-snake2
