--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
-name:                haskell-gui-snake2
+name:                haskell-gui-snake
 version:             0.1.0.0
-github:              "githubuser/haskell-gui-snake2"
+github:              "https://github.com/sam-barr/haskell-gui-snake"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
+author:              "Sam Barr"
+maintainer:          "sam.barr@me.com"
+copyright:           "2018 Sam Barr"
 
 extra-source-files:
 - README.md
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on Github at <https://github.com/githubuser/haskell-gui-snake2#readme>
+description:         snake
 
 dependencies:
 - base >= 4.7 && < 5
@@ -36,10 +36,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - haskell-gui-snake2
+    - haskell-gui-snake
 
 tests:
-  haskell-gui-snake2-test:
+  haskell-gui-snake-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -47,4 +47,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - haskell-gui-snake2
+    - haskell-gui-snake
