--- a/package.yaml
+++ b/package.yaml
@@ -36,6 +36,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     - -O2
+    - -dynamic
     dependencies:
     - haskell-gui-snake
 
@@ -47,5 +48,7 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -O2
+    - -dynamic
     dependencies:
     - haskell-gui-snake
